--- a/package/package.json
+++ b/package/package.json
@@ -6,11 +6,14 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aaronamendez/kylies-virtuality.git"
-  },
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/aaronamendez/kylies-virtuality.git"
+	},
 	"keywords": [],
 	"author": "Aaron Mendez",
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"chalk": "^4.1.2"
+	}
 }
